# opentype-hacking

./: Cargo.toml  README.md
res/: decided-pronunciations-ipa.txt  decided-pronunciations.txt  frequency-table.json  readlex-entries-top5000.json  readlex-exceptions.json  topwords-pronunciation-2.txt  topwords-pronunciation.txt  topwords.txt
src/: astarlike.rs  astarlike2.rs  consensus_finding.rs  dictionary.rs  fea_grammar.pest  fea_parsing.rs  frequencies.rs  gaussian_astarlike.rs  gaussian_astarlike2.rs  gaussian_astarlike22.rs  gaussian_expectation_table.rs  gaussian_expectation_table2.rs  gaussians.rs  genastarlike.rs  glyphs.rs  hbshape.rs  hbshape_consistency_tests.rs  high_level_substitutions.rs  high_level_substitutions2.rs  hl_debug_grammar.pest  ipa.rs  lib.rs  readlex.rs  sub_generation.rs  substitutions.rs  substitutions2.rs
working/: add-3.txt  take-1.txt  take-2.txt
