[package]
name = "feature_refining"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
lazy_static = "1.4.0"
levenshtein-diff = "0.2.4"
rand = { version = "0.8.5", features = ["small_rng"] }
float-ord = "0.3.2"
rayon = "1.7.0"
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
tempfile = "3.8.1"
pest = "2.7.5"
pest_derive = "2.7.5"
keyed_priority_queue = "0.4.2"
howlong = "0.1.7"
statrs = "0.16.0"
ndarray = "0.15.6"
more-asserts = "0.3.1"
noisy_float = "0.2.0"
itertools = "0.13.0"
dialoguer = "0.11.0"
console = "0.15.8"
diff = "0.1.13"
clap = { version = "4.5.8", features = ["derive"] }
json = "0.12.4"
nom = "7.1.3"

